# ecohome

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: devices.md  endpoints.md  login.md  mitm.md  shares.md
scripts/: hot-water.sh
src/ecohome/: __init__.py  cli.py  client.py
