[project]
name = "ecohome"
version = "0.1.3"
description = "Open-source Python implementation of the New Energy (Batavia Heat) Eco-Home API"
readme = "README.md"
authors = [
    { name = "Sjors Gielen", email = "pypi@sjorsgielen.nl" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/sgielen/ecohome"
Issues = "https://github.com/sgielen/ecohome/issues"

[project.scripts]
pyecohome = "ecohome.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
